[package]
name = "taurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quic"
path = "src/quic/lib.rs"

[[bin]]
name = "quic_bin"
path = "src/main.rs"

[dependencies]
octets = "0.3.0"
rustls = {version = "0.21.7", features = ["quic"]}
rcgen = "0.12.0"
rand = "0.8.5"
ring = "0.17.7"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11" }
