[package]
name = "taurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quic"
path = "src/quic/lib.rs"

[[bin]]
name = "quic_bin"
path = "src/main.rs"

[dependencies]
octets = "0.3.0"
rustls = { version = "0.23.8", default-features = false, features = ["ring", "std"] }
rcgen = "0.13.1"
rand = "0.8.5"
ring = "0.17.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
