[package]
name = "taurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quic"
path = "src/quic/lib.rs"

[[bin]]
name = "quic_bin"
path = "src/main.rs"

[dependencies]
octets = "0.3.0"
rustls = { version = "0.23.21", default-features = false, features = ["ring", "std"] }
rcgen = "0.13.2"
rand = "0.8.5"
ring = "0.17.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13" }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indexmap = "2.7.0"
parking_lot = "0.12.3"
intrusive-collections = "0.9.7"
thingbuf = {version = "0.1.6", features = ["static", "alloc"]}
socket2 = "0.5.8"
smallvec = "1.15.1"
